--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "geoip2/geoip2": "^2.10"
+        "geoip2/geoip2": "^2.10",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^5.3"
